Refactored error handling code for seperation of concern for rateproduct api and updated documentation
